# serializer version: 1
# name: test_media_player[media_player.my_super_test_player_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.my_super_test_player_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': 'mdi:speaker',
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 8320959>,
    'translation_key': 'media_player',
    'unique_id': '00:00:00:00:00:02',
    'unit_of_measurement': None,
  })
# ---
# name: test_media_player[media_player.my_super_test_player_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_queue': None,
      <MediaPlayerEntityStateAttribute.APP_ID: 'app_id'>: 'spotify',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <MediaPlayerEntityStateAttribute.ENTITY_PICTURE_LOCAL: 'entity_picture_local'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Super Test Player 2',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:speaker',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      'mass_player_type': 'player',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Test Album',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Test Artist',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify://track/5d95dc5be77e4f7eb4939f62cfef527b',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 300,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 0,
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'Test Track',
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'Spotify Connect',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 8320959>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.2,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.my_super_test_player_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_media_player[media_player.test_group_player_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_group_player_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': 'mdi:speaker-multiple',
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 8320959>,
    'translation_key': 'media_player',
    'unique_id': 'test_group_player_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_media_player[media_player.test_group_player_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_queue': 'test_group_player_1',
      <MediaPlayerEntityStateAttribute.APP_ID: 'app_id'>: 'music_assistant',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <MediaPlayerEntityStateAttribute.ENTITY_PICTURE_LOCAL: 'entity_picture_local'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Group Player 1',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
        'media_player.test_player_1',
        'media_player.my_super_test_player_2',
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:speaker-multiple',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      'mass_player_type': 'group',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Use Your Illusion I',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: "Guns N' Roses",
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify://track/3YRCqOhFifThpSRFJ1VWFM',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 536,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 232,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION_UPDATED_AT: 'media_position_updated_at'>: datetime.datetime(2024, 10, 30, 18, 31, 49, 565951, tzinfo=datetime.timezone.utc),
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'November Rain',
      <MediaPlayerEntityStateAttribute.MEDIA_REPEAT: 'repeat'>: <RepeatMode.ALL: 'all'>,
      <MediaPlayerEntityStateAttribute.MEDIA_SHUFFLE: 'shuffle'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 8320959>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.06,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_group_player_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_media_player[media_player.test_player_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'munich_translation',
        'stuttgart_translation',
      ]),
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Music Assistant Queue',
        'Line-In',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_player_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': 'mdi:speaker',
    'original_name': None,
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 8388543>,
    'translation_key': 'media_player',
    'unique_id': '00:00:00:00:00:01',
    'unit_of_measurement': None,
  })
# ---
# name: test_media_player[media_player.test_player_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_queue': '00:00:00:00:00:01',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Player 1',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:speaker',
      'mass_player_type': 'player',
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'munich_translation',
        'stuttgart_translation',
      ]),
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Music Assistant Queue',
        'Line-In',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 8388543>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_player_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_media_player_get_queue_action
  dict({
    'media_player.test_group_player_1': dict({
      'active': True,
      'current_index': 26,
      'current_item': dict({
        'duration': 536,
        'media_item': dict({
          'album': dict({
            'image': None,
            'media_type': <MediaType.ALBUM: 'album'>,
            'name': 'Use Your Illusion I',
            'uri': 'spotify://album/0CxPbTRARqKUYighiEY9Sz',
            'version': '',
          }),
          'artists': list([
            dict({
              'image': None,
              'media_type': <MediaType.ARTIST: 'artist'>,
              'name': "Guns N' Roses",
              'uri': 'spotify://artist/3qm84nBOXUEQ2vnTfUTTFC',
              'version': '',
            }),
          ]),
          'explicit': False,
          'favorite': False,
          'image': None,
          'media_type': <MediaType.TRACK: 'track'>,
          'name': 'November Rain',
          'uri': 'spotify://track/3YRCqOhFifThpSRFJ1VWFM',
          'version': '',
        }),
        'name': "Guns N' Roses - November Rain",
        'queue_item_id': '5d95dc5be77e4f7eb4939f62cfef527b',
        'stream_details': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'content_type': 'ogg',
          'item_id': '3YRCqOhFifThpSRFJ1VWFM',
          'provider': 'spotify',
          'sample_rate': 44100,
        }),
        'stream_title': None,
      }),
      'items': 1094,
      'name': 'Test Group Player 1',
      'next_item': dict({
        'duration': 207,
        'media_item': dict({
          'album': dict({
            'image': None,
            'media_type': <MediaType.ALBUM: 'album'>,
            'name': 'La Folie',
            'uri': 'qobuz://album/0724353468859',
            'version': '',
          }),
          'artists': list([
            dict({
              'image': None,
              'media_type': <MediaType.ARTIST: 'artist'>,
              'name': 'The Stranglers',
              'uri': 'qobuz://artist/26779',
              'version': '',
            }),
          ]),
          'explicit': None,
          'favorite': False,
          'image': None,
          'media_type': <MediaType.TRACK: 'track'>,
          'name': 'Golden Brown',
          'uri': 'qobuz://track/1004735',
          'version': '',
        }),
        'name': 'The Stranglers - Golden Brown',
        'queue_item_id': '990ae8f29cdf4fb588d679b115621f55',
        'stream_details': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'content_type': 'flac',
          'item_id': '1004735',
          'provider': 'qobuz',
          'sample_rate': 44100,
        }),
        'stream_title': None,
      }),
      'queue_id': 'test_group_player_1',
      'repeat_mode': 'all',
      'shuffle_enabled': True,
    }),
  })
# ---
